objects/LLC_BI__Collateral_History__c.object
<CustomObject>
    <description>The Collateral History Object is used to track the history of collateral used to secure loans.</description>
    <fields>
        <fullName>LLC_BI__Appraisal_Date__c</fullName>
        <description>This field is manually populated. This field is a date field, used to specify the date at which an appraisal on the collateral had taken place.</description>
        <inlineHelpText>Historical Appraisal date that corresponds to the real estate value</inlineHelpText>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is manually populated. This field is a currency field, used to specify the value of a piece of collateral.</description>
        <label>Collateral Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Collateral__c</fullName>
        <description>This field is automatically populated. This field is a Master- Detail field, used to look up the collateral that this collateral history is associated to.</description>
        <label>Loan Collateral</label>
        <referenceTo>LLC_BI__Loan_Collateral__c</referenceTo>
        <relationshipLabel>Collateral History</relationshipLabel>
        <relationshipName>Collateral_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Notes__c</fullName>
        <description>This field is optional and manually populated. This field is a free form text field used to add notes about the collateral history of a particular piece of collateral</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is optional. It is manually populated. It allows users to enter additional details about the type of collateral used to secure a loan.</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Collateral History</label>
    <nameField>
        <displayFormat>CH-{00000000}</displayFormat>
        <label>Collateral History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>